force-app/main/default/objects/Order__c/fields/Last_Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>Last_Integration_Error__c</fullName>
    <label>Last Integration Error</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>